--- a/app/www/views/specialisten.html
+++ b/app/www/views/specialisten.html
@@ -27,7 +27,7 @@
           <p class="detail-info-icon"><i class="ion-earth"></i><span id="website"></span></p>
       </div>
       <div class="content-block">
-        <p><a href="#" class="button active bg-teal color-white">Afspraak maken</a></p>
+        <p><a href="views/afspraak.html" class="button active bg-teal color-white">Afspraak maken</a></p>
       </div>
     </div>
 
