id gezet bij afspraak button p tag weggehaald

--- a/app/www/views/afspraak.html
+++ b/app/www/views/afspraak.html
@@ -34,12 +34,12 @@
       </div>
       <div class="content-block">
         <p class="buttons-row">
-          <a href="#" class="button bg-teal color-white">AM</a>
-          <a href="#" class="button bg-white color-teal">PM</a>
+          <a href="#" id="am" class="button bg-teal color-white">AM</a>
+          <a href="#" id="pm" class="button bg-white color-teal">PM</a>
         </p>
       </div>
       <div class="content-block">
-        <p><a href="#" class="button active bg-teal color-white">Afspraak maken</a></p>
+        <a id="add_appointment" class="button active bg-teal color-white">Afspraak maken</a>
       </div>
     </div>
 
