--- a/app/www/views/home.html
+++ b/app/www/views/home.html
@@ -61,6 +61,15 @@
                 </div>
               </a>
             </li>
+            <li>
+              <a href="views/afsprakenverzoek.html" class="item-content item-link">
+                <div class="item-inner">
+                  <div class="item-title-row">
+                    <div class="item-title">Afspraken verzoek</div>
+                  </div>
+                </div>
+              </a>
+            </li>
           </ul>
         </div>
 
