--- a/app/www/views/faq.html
+++ b/app/www/views/faq.html
@@ -9,7 +9,10 @@
            </a>
         </div>
         <div class="center">FAQ</div>
-        <div class="right"></div>
+        <div class="right">
+          <a href="https://www.facebook.com/healthydopage/" class="link">
+            <i class="icon ion-edit"></i>
+          </a></div>
       </div>
     </div>
     <form class="searchbar searchbar-init" data-search-list=".list-block-search" data-search-in=".item-title" data-found=".searchbar-found" data-not-found=".searchbar-not-found" > 
