--- a/app/www/views/afsprakenverzoek.html
+++ b/app/www/views/afsprakenverzoek.html
@@ -1,45 +1,65 @@
 <div class="pages">
-  <div data-page="afsprakenverzoek" class="page navbar-fixed theme-teal">
+  <div></div>
+    <div data-page="afsprakenverzoek" class="page navbar-fixed theme-teal">
 
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="left">
-          <a href="views/home.html" class="link">
-            <i class="icon ion-chevron-left"></i>
-           </a>
+      <div class="navbar">
+        <div class="navbar-inner">
+          <div class="left">
+            <a href="views/home.html" class="link">
+              <i class="icon ion-chevron-left"></i>
+             </a>
+          </div>
+          <div class="center">Afspraken verzoek</div>
+          <div class="right">
+            <f7-badge class="afspraak_badge" color="cyan">5</f7-badge>
+          </div>
         </div>
-        <div class="center">Afspraken verzoek</div>
-        <div class="right"></div>
       </div>
+      <div class="page-content pull-to-refresh-content" data-ptr-distance="55">
+    <!-- Default pull to refresh layer-->
+    <div class="pull-to-refresh-layer">
+      <div class="preloader"></div>
+      <div class="pull-to-refresh-arrow"></div>
     </div>
-    <div class="page-content">
-      <div class="card verzoek_open">
-        <div class="card-header"><div class="links"><i class="ion-eye color-blue"></i></div>Jonathan</div>
-        <div class="card-content">
-          <div class="card-content-inner">Beste Emanuel, U had een verzoek gedaan om een afspraak te maken op 24-4-2017 AM om naar de oogarts te gaan. uw verzoek kan niet geaccepteerd worden omdat het al volggeboekt is maar als u wilt kunt u dan op 30-4-2017 16:00PM komen voor uw behandeling.</div>
-        </div>
-        <div class="row" id="knoppen_verzoek">
-          <div class="col-33">
-            <a href="#" id="accept_knop" class="button button-big button-red">Accept</a>
+      <div class="page-content p-t-0">
+        <div class="card verzoek_open">
+          <div class="card-header"><div class="links"><i class="ion-eye color-blue"></i></div>Jonathan</div>
+          <div class="card-content">
+            <div class="card-content-inner">Beste Emanuel, U had een verzoek gedaan om een afspraak te maken op 24-4-2017 AM om naar de oogarts te gaan. uw verzoek kan niet geaccepteerd worden omdat het al volggeboekt is maar als u wilt kunt u dan op 30-4-2017 16:00PM komen voor uw behandeling.</div>
           </div>
-          <div class="col-33">
-            <a href="views/afspraak.html" class="button button-big button-green">nieuw</a>
+          <div class="row card-content-inner" id="knoppen_verzoek">
+            <div class="col-50">
+              <a href="#" id="accept_knop" class="button button-big bg-teal color-white">Accept</a>
+            </div>
+            <div class="col-50">
+              <a href="#" id="cancel_knop" class="button button-big bg-red color-white">Cancel</a>
+            </div>
           </div>
-          <div class="col-33">
-            <a href="#" id="cancel_knop" class="button button-big button-green">Cancel</a>
+          <div class="row">
+            <div class="col-33"></div>
+            <div class="col-33">
+              <p class="link_new">
+                <b>
+                  <u>
+                    <a href="views/afspraak.html" class="m-t-20 m-b-20">Nieuw</a>
+                  </u>
+                </b>
+              </p>
+            </div>
+            <div class="col-33"></div>
           </div>
         </div>
-      </div>
-      <div class="card verzoek_accept">
-        <div class="card-header"><div class="links"><i class="ion-eye color-blue"></i></div>Jonathan</div>
-        <div class="card-content">
-          <div class="card-content-inner">Beste Emanuel, uw verzoek is geaccepteerd en uw afspraak is 25-4-2017 11:45AM</div>
+        <div class="card verzoek_accept">
+          <div class="card-header"><div class="links"><i class="ion-eye color-blue"></i></div>Jonathan</div>
+          <div class="card-content">
+            <div class="card-content-inner">Beste Emanuel, uw verzoek is geaccepteerd en uw afspraak is 25-4-2017 11:45AM</div>
+          </div>
         </div>
-      </div>
-      <div class="card verzoek_weigeren">
-        <div class="card-header"><div class="links"><i class="ion-eye color-blue"></i></div>Jonathan</div>
-        <div class="card-content">
-          <div class="card-content-inner">Beste Emanuel, uw verzoek is geaccepteerd en uw afspraak is 25-4-2017 11:45AM</div>
+        <div class="card verzoek_weigeren">
+          <div class="card-header"><div class="links"><i class="ion-eye color-blue"></i></div>Jonathan</div>
+          <div class="card-content">
+            <div class="card-content-inner">Beste Emanuel, uw verzoek is geaccepteerd en uw afspraak is 25-4-2017 11:45AM</div>
+          </div>
         </div>
       </div>
     </div>
