--- a/app/www/views/home.html
+++ b/app/www/views/home.html
@@ -62,6 +62,15 @@
               </a>
             </li>
             <li>
+              <a href="views/afspraak.html" class="item-content item-link">
+                <div class="item-inner">
+                  <div class="item-title-row">
+                    <div class="item-title">Afspraken maken</div>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
               <a href="views/afsprakenverzoek.html" class="item-content item-link">
                 <div class="item-inner">
                   <div class="item-title-row">
