Done some changes

--- a/app/www/views/afsprakenverzoek.html
+++ b/app/www/views/afsprakenverzoek.html
@@ -11,7 +11,7 @@
           </div>
           <div class="center">Afspraken verzoek</div>
           <div class="right">
-            <f7-badge class="afspraak_badge" color="cyan">5</f7-badge>
+            <f7-badge class="afspraak_badge" color="cyan"></f7-badge>
           </div>
         </div>
       </div>
